-
Bug
-
Resolution: Done
-
P1: Critical
-
5.9.0 Alpha
-
None
-
Linux 64 Bit
56-Based Chromium
1.Build and run examples/webenginewidgets/spellchecker
2. enter the word "lovey" into any text field and press the space key a couple of times.
Expected result: The word is squiggly underlined, right click brings up option to correct to "love"
Actual result: No squiggly lines. The context menu offers an option to enable spellcheck, but clicking it does not do anything.
| For Gerrit Dashboard: QTBUG-59687 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 190514,3 | Fix spellcheck feature check | 5.9 | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 190521,2 | Fix broken inclusion of webenigne spellcheck test | 5.9 | qt/qtwebengine | Status: MERGED | +2 | 0 |