Fix spellcheck feature check

Was changed to generated buildflag headers instead of command line
defines.

Task-number: QTBUG-59687
Change-Id: Iead64f5321d000c07172ee27a0032394527ec501
Reviewed-by: Michael Brüning <michael.bruning@qt.io>